syntax = "proto3";

message LeaseSheetMessage {
    repeated PaxosLeases LeaseOrder = 1;
}

message LeaseSheetReply {}

message PaxosLeases {
    string tmId = 1;
    repeated string leases = 2;
}

service LeaseManagerServicing {
    rpc LeaseSheet (LeaseSheetMessage) returns (LeaseSheetReply);
}
